fix: layout spacing issues

--- a/static/main.css
+++ b/static/main.css
@@ -34,8 +34,8 @@ a {
 }
 
 .box {
-    margin-left: 2rem;
-    width: calc(100vw - 4rem);
+    margin-left: 1rem;
+    width: calc(100vw - 2rem);
 }
 
 h1,
@@ -65,7 +65,7 @@ p {
 }
 .card {
     background: var(--color-white);
-    padding: 2rem;
+    padding: 1.5rem;
     padding-bottom: 1rem;
     border-radius: 1rem;
 }
